Support MC 1.16 and Java 17