@@ -20,7 +20,7 @@ public class XKickAll extends XTargetCommand {
 
     @Override
     protected void execute(CommandSender sender, Command command, String label, List<Object> args) throws CommandMessageException, SQLException {
-        var reason = (String) args.getFirst();
+        var reason = (String) args.get(0);
         var players = Bukkit.getOnlinePlayers();
 
         for (var player : players)
