@@ -19,7 +19,7 @@ public class XLockdown extends XCommand {
 
     @Override
     protected void execute(CommandSender sender, Command command, String label, List<Object> args) throws SQLException {
-        var reason = (String) args.getFirst();
+        var reason = (String) args.get(0);
         var action = ExpandedBans.Database.unLockdown()
                 ? "updated"
                 : "created";
